# runes

./: .gitignore  Cargo.toml  build_debug.sh  flake.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 8j529fxryb0d6ja0fnlqygz4mgz6g37f-source  a861xh0d2iy6ia0vmqnrcr1klp4l9krg-source  djr75xy95v2nxqppi7pqvkng711p6zfp-source
data/: opcodes1.html  opcodes2.html  opcodes3.json
data/handler/: ADC.rs  AND.rs  ASL.rs  BCC.rs  BCS.rs  BIT.rs  BMI.rs  BNE.rs  BPL.rs  BRK.rs  BVC.rs  BVS.rs  CLC.rs  CLD.rs  CLI.rs  CLV.rs  CMP.rs  CPX.rs  CPY.rs  DEC.rs  DEX.rs  DEY.rs  EOR.rs  INC.rs  INX.rs  INY.rs  JMP.rs  JSR.rs  LDA.rs  LDX.rs  LDY.rs  LSR.rs  NOP.rs  ORA.rs  PHA.rs  PHP.rs  PLA.rs  PLP.rs  ROL.rs  ROR.rs  (+15 more)
src/: bus.rs  cpu.rs  main.rs  utils.rs
xtask/: Cargo.toml
xtask/src/: builder.rs  main.rs  opcode.rs
