[package]
name = "runes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixel_engine = { path = "../pixel_engine/pixel_engine" }
pixel_engine_draw = { path = "../pixel_engine/pixel_engine_draw" }
pixel_engine_backend = { path = "../pixel_engine/pixel_engine_backend" }
bitflags = "1.3.2"

[patch.crates-io]
pixel_engine_draw = { path = "../pixel_engine/pixel_engine_draw" }
pixel_engine_backend = { path = "../pixel_engine/pixel_engine_backend" }

[workspace]
members = ["xtask", "."]

[profile.release]
debug = true
