[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.2"
bitflags = "1.3.2"
proc-macro2 = { version = "1.0.47", default-features = false }
quote = { version = "1.0.21", default-features = false }
scraper = "0.13.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
syn = { version = "1.0.103", default-features = false, features = ["parsing", "full", "printing"] }
walkdir = "2.3.2"
